[gd_scene load_steps=39 format=3 uid="uid://djjttvn3vr14t"]

[ext_resource type="Script" path="res://scenes/levels/level_base.gd" id="1_tipln"]
[ext_resource type="PackedScene" uid="uid://dcceufutsw14x" path="res://ui/navigation_manager.tscn" id="2_vmyq7"]
[ext_resource type="PackedScene" uid="uid://d3mh2452jmoyf" path="res://camera.tscn" id="3_psfu1"]
[ext_resource type="Script" path="res://environment/parallax_background.gd" id="4_ramrd"]
[ext_resource type="Texture2D" uid="uid://tso54yg1v1h5" path="res://assets/ski_01.png" id="5_jr5n2"]
[ext_resource type="PackedScene" uid="uid://bwx0xblbbojg6" path="res://effects/shake/shake_effect.tscn" id="6_53fg7"]
[ext_resource type="Texture2D" uid="uid://bdh6nvf8asyhq" path="res://assets/ski_02.png" id="7_nu3j2"]
[ext_resource type="PackedScene" uid="uid://cjsupsgoe5um5" path="res://environment/clouds_02.tscn" id="8_4cgvv"]
[ext_resource type="PackedScene" uid="uid://dv2fe0trni1n5" path="res://environment/clouds_01.tscn" id="9_in2as"]
[ext_resource type="Texture2D" uid="uid://vjltfx4oqcjy" path="res://assets/ground_01.png" id="10_uot5i"]
[ext_resource type="PackedScene" uid="uid://bf3cqqsb0w2xh" path="res://environment/vegetable_back_05.tscn" id="11_ie24u"]
[ext_resource type="PackedScene" uid="uid://bpdm3ahetr17d" path="res://environment/vegetable_back_06.tscn" id="12_1hx36"]
[ext_resource type="PackedScene" uid="uid://dnsnnb8m8dtvt" path="res://environment/vegetable_back_03.tscn" id="13_tlfv6"]
[ext_resource type="PackedScene" uid="uid://inpgonisj736" path="res://environment/vegetable_back_04.tscn" id="14_5rhgg"]
[ext_resource type="PackedScene" uid="uid://dghb4ctrsrsc3" path="res://environment/vegetable_back_01.tscn" id="15_5whur"]
[ext_resource type="PackedScene" uid="uid://cahi8qp1m3055" path="res://environment/vegetable_back_02.tscn" id="16_5nwov"]
[ext_resource type="Texture2D" uid="uid://kewii7qnwrlb" path="res://assets/ground_02.png" id="17_yutmc"]
[ext_resource type="PackedScene" uid="uid://8rlt50bjqrnr" path="res://actors/frogy/frogy.tscn" id="18_4ktp1"]
[ext_resource type="PackedScene" uid="uid://dxtvkmwjy1fs8" path="res://actors/coco/coco.tscn" id="19_j6aqw"]
[ext_resource type="Script" path="res://environment/wall_death.gd" id="20_uljwp"]
[ext_resource type="Texture2D" uid="uid://bfivnydmbttus" path="res://assets/frame.png" id="21_3ie3d"]
[ext_resource type="PackedScene" uid="uid://biey47xajkipj" path="res://environment/vegetable_front_01.tscn" id="22_dbc5b"]
[ext_resource type="PackedScene" uid="uid://dxswaxn55u0cv" path="res://environment/vegetable_front_02.tscn" id="23_2xiio"]
[ext_resource type="PackedScene" uid="uid://b4t25gkmm47ld" path="res://environment/vegetable_front_03.tscn" id="24_ruqy3"]
[ext_resource type="PackedScene" uid="uid://ddpd3x6doacdu" path="res://environment/vegetable_front_04.tscn" id="25_r5leh"]
[ext_resource type="PackedScene" uid="uid://b2ewbis3ifr1b" path="res://environment/vegetable_front_05.tscn" id="26_176d0"]
[ext_resource type="Texture2D" uid="uid://cvog4gocwjgsf" path="res://assets/foreground_01.png" id="27_lke4w"]
[ext_resource type="PackedScene" uid="uid://baq303h7ydbfg" path="res://ui/ui.tscn" id="29_3dwbs"]
[ext_resource type="PackedScene" uid="uid://c817v2wc4m8jh" path="res://effects/sound_effect.tscn" id="30_yiyhi"]
[ext_resource type="AudioStream" uid="uid://bojo5kfbm7lxi" path="res://assets/sounds/level_clear.ogg" id="31_sru3i"]
[ext_resource type="AudioStream" uid="uid://divbjlofbt0f6" path="res://assets/sounds/game_over.ogg" id="32_6wu1l"]
[ext_resource type="AudioStream" uid="uid://bpf7v7o44fsbe" path="res://assets/music/Bass-Invaders.mp3" id="33_hff8q"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_uxiu3"]
resource_local_to_scene = true
noise_type = 0
seed = 3
frequency = 0.029
fractal_octaves = 1
fractal_lacunarity = 1.0

[sub_resource type="FastNoiseLite" id="FastNoiseLite_fjpae"]
resource_local_to_scene = true
noise_type = 0
seed = 3
frequency = 0.029
fractal_octaves = 1
fractal_lacunarity = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oav07"]
size = Vector2(138, 1957)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6v06q"]
size = Vector2(138, 1957)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_imguq"]
size = Vector2(1376, 135.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uj4gh"]
size = Vector2(1188, 74)

[node name="LevelBase" type="Node2D"]
script = ExtResource("1_tipln")

[node name="NavigationManager" parent="." instance=ExtResource("2_vmyq7")]

[node name="Camera" parent="." instance=ExtResource("3_psfu1")]

[node name="EnvironmentBack" type="Node2D" parent="."]
z_index = -10

[node name="ParallaxBackground" type="ParallaxBackground" parent="EnvironmentBack"]
follow_viewport_enabled = true
script = ExtResource("4_ramrd")

[node name="ColorRect" type="ColorRect" parent="EnvironmentBack/ParallaxBackground"]
offset_left = -64.0
offset_top = -30.0
offset_right = 1110.0
offset_bottom = 1957.0
color = Color(1, 1, 0.8, 1)

[node name="Sky01ParallaxLayer" type="ParallaxLayer" parent="EnvironmentBack/ParallaxBackground"]
motion_scale = Vector2(0.004, 0.004)

[node name="Ski01" type="Sprite2D" parent="EnvironmentBack/ParallaxBackground/Sky01ParallaxLayer"]
position = Vector2(471, 928)
texture = ExtResource("5_jr5n2")

[node name="ShakeEffect" parent="EnvironmentBack/ParallaxBackground/Sky01ParallaxLayer/Ski01" node_paths=PackedStringArray("target") instance=ExtResource("6_53fg7")]
target = NodePath("..")
auto_start = true
duration = -1.0
max_offset = Vector2(500, 0)
frequency = 0.6
noise = SubResource("FastNoiseLite_uxiu3")

[node name="Skay02ParallaxLayer" type="ParallaxLayer" parent="EnvironmentBack/ParallaxBackground"]
motion_scale = Vector2(0.005, 0.005)

[node name="Ski02" type="Sprite2D" parent="EnvironmentBack/ParallaxBackground/Skay02ParallaxLayer"]
position = Vector2(471, 769)
texture = ExtResource("7_nu3j2")

[node name="ShakeEffect" parent="EnvironmentBack/ParallaxBackground/Skay02ParallaxLayer/Ski02" node_paths=PackedStringArray("target") instance=ExtResource("6_53fg7")]
target = NodePath("..")
auto_start = true
duration = -1.0
max_offset = Vector2(500, 0)
frequency = 1.0
noise = SubResource("FastNoiseLite_fjpae")

[node name="Clouds01ParallaxLayer" type="ParallaxLayer" parent="EnvironmentBack/ParallaxBackground"]
motion_scale = Vector2(0.02, 0.02)

[node name="Clouds_02" parent="EnvironmentBack/ParallaxBackground/Clouds01ParallaxLayer" instance=ExtResource("8_4cgvv")]
position = Vector2(503, 1078)

[node name="Clouds02ParallaxLayer" type="ParallaxLayer" parent="EnvironmentBack/ParallaxBackground"]
motion_scale = Vector2(0.03, 0.03)

[node name="Clouds_01" parent="EnvironmentBack/ParallaxBackground/Clouds02ParallaxLayer" instance=ExtResource("9_in2as")]
position = Vector2(536, 1222)

[node name="GroundParallaxLayer" type="ParallaxLayer" parent="EnvironmentBack/ParallaxBackground"]
motion_scale = Vector2(0.05, 0.05)

[node name="Ground01" type="Sprite2D" parent="EnvironmentBack/ParallaxBackground/GroundParallaxLayer"]
position = Vector2(573, 1569)
texture = ExtResource("10_uot5i")

[node name="Vegetables01ParallaxLayer" type="ParallaxLayer" parent="EnvironmentBack/ParallaxBackground"]
motion_scale = Vector2(0.1, 0.1)

[node name="VegetableBack05" parent="EnvironmentBack/ParallaxBackground/Vegetables01ParallaxLayer" instance=ExtResource("11_ie24u")]
position = Vector2(364, 1391)

[node name="VegetableBack06" parent="EnvironmentBack/ParallaxBackground/Vegetables01ParallaxLayer" instance=ExtResource("12_1hx36")]
position = Vector2(691, 1404)

[node name="Vegetables02ParallaxLayer" type="ParallaxLayer" parent="EnvironmentBack/ParallaxBackground"]
motion_scale = Vector2(0.15, 0.15)

[node name="VegetableBack03" parent="EnvironmentBack/ParallaxBackground/Vegetables02ParallaxLayer" instance=ExtResource("13_tlfv6")]
position = Vector2(586, 1434)

[node name="VegetableBack04" parent="EnvironmentBack/ParallaxBackground/Vegetables02ParallaxLayer" instance=ExtResource("14_5rhgg")]
position = Vector2(799, 1447)

[node name="Vegetables03ParallaxLayer" type="ParallaxLayer" parent="EnvironmentBack/ParallaxBackground"]
motion_scale = Vector2(0.18, 0.18)

[node name="VegetableBack01" parent="EnvironmentBack/ParallaxBackground/Vegetables03ParallaxLayer" instance=ExtResource("15_5whur")]
position = Vector2(191, 1476)

[node name="VegetableBack02" parent="EnvironmentBack/ParallaxBackground/Vegetables03ParallaxLayer" instance=ExtResource("16_5nwov")]
position = Vector2(483, 1492)

[node name="Ground02" type="Sprite2D" parent="EnvironmentBack"]
position = Vector2(491, 1694)
texture = ExtResource("17_yutmc")

[node name="Frogy" parent="." instance=ExtResource("18_4ktp1")]
position = Vector2(503, 1245)

[node name="Coco" parent="." instance=ExtResource("19_j6aqw")]
position = Vector2(529, 1563)

[node name="Walls" type="StaticBody2D" parent="." groups=["walls"]]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls"]
position = Vector2(-61, 968.5)
shape = SubResource("RectangleShape2D_oav07")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls"]
position = Vector2(1142, 967)
shape = SubResource("RectangleShape2D_6v06q")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Walls"]
position = Vector2(540, 18.25)
shape = SubResource("RectangleShape2D_imguq")

[node name="WallDeath" type="StaticBody2D" parent="." groups=["wall_death"]]
position = Vector2(0, 1914)
collision_layer = 16
collision_mask = 0
script = ExtResource("20_uljwp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallDeath"]
position = Vector2(566, 27)
shape = SubResource("RectangleShape2D_uj4gh")

[node name="EnvironmentFront" type="Node2D" parent="."]
z_index = 10

[node name="Frame" type="Sprite2D" parent="EnvironmentFront"]
clip_children = 2
position = Vector2(535, 984)
texture = ExtResource("21_3ie3d")

[node name="VegetablesFront" type="Node2D" parent="EnvironmentFront"]
position = Vector2(532.6, 1684.4)

[node name="VegetableFront01" parent="EnvironmentFront/VegetablesFront" instance=ExtResource("22_dbc5b")]
position = Vector2(-455, 101)
rotation = 0.121798
scale = Vector2(0.7, 0.7)

[node name="VegetableFront02" parent="EnvironmentFront/VegetablesFront" instance=ExtResource("23_2xiio")]
position = Vector2(468, 110)
rotation = -0.21888
scale = Vector2(0.7, 0.7)

[node name="VegetableFront03" parent="EnvironmentFront/VegetablesFront" instance=ExtResource("24_ruqy3")]
position = Vector2(-405, 123)
rotation = 0.19508
scale = Vector2(0.7, 0.7)

[node name="VegetableFront04" parent="EnvironmentFront/VegetablesFront" instance=ExtResource("25_r5leh")]
position = Vector2(561.4, 50.6)
rotation = -0.399763
scale = Vector2(0.7, 0.7)

[node name="VegetableFront05" parent="EnvironmentFront/VegetablesFront" instance=ExtResource("26_176d0")]
position = Vector2(-593, 49)
rotation = 0.41783
scale = Vector2(0.7, 0.7)

[node name="Foreground01" type="Sprite2D" parent="EnvironmentFront"]
position = Vector2(545.6, 1836.4)
scale = Vector2(0.7, 0.7)
texture = ExtResource("27_lke4w")

[node name="UI" parent="." instance=ExtResource("29_3dwbs")]

[node name="Effects" type="Node2D" parent="."]

[node name="LevelClearedSoundEffect" parent="Effects" instance=ExtResource("30_yiyhi")]
stream = ExtResource("31_sru3i")

[node name="GameOverSoundEffect" parent="Effects" instance=ExtResource("30_yiyhi")]
stream = ExtResource("32_6wu1l")

[node name="BackgroundMusic" parent="Effects" instance=ExtResource("30_yiyhi")]
stream = ExtResource("33_hff8q")
bus = &"music"
loop = true
fade_in_time = 2.0
fade_out_time = 0.5

[connection signal="game_over" from="." to="Effects/GameOverSoundEffect" method="perform"]
[connection signal="game_over" from="." to="NavigationManager" method="go_to_with_delay" binds= ["game_over"]]
[connection signal="level_cleared" from="." to="Effects/LevelClearedSoundEffect" method="perform"]
[connection signal="level_cleared" from="." to="NavigationManager" method="go_to_with_delay" binds= ["stats"]]
[connection signal="level_finishing" from="." to="Effects/BackgroundMusic" method="finish"]
[connection signal="ready" from="." to="Effects/BackgroundMusic" method="perform"]
